--- a/templates/new_door/add_payment_mode.html
+++ b/templates/new_door/add_payment_mode.html
@@ -1,4 +1,10 @@
-{% extends 'base.html' %} {% load static %} {% block title %} PayMode_Type {% endblock title %} {% block body %} 
+{% extends 'base.html' %} {% load static %} {% block title %} Payment Mode Type {% endblock title %} {% block body %} 
+<div class="alert alert-success alert-dismissible fade show" style="display: none;" role="alert">
+  <span class="message"></span>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <div class="col-md-12">
   <form
     id="TypeValidation"
@@ -125,48 +131,34 @@
                           >
                         </a>
 
-                        <a
-                          href="#"
-                          class="d-inline"
-                          title="Delete payment mode"
-                          data-toggle="modal" data-target="#deleteToggle"
-                        >
-                          <i
-                            class="material-icons"
-                            style="
-                              margin-right: 5px;
-                              margin-top: 10px;
-                              margin-bottom: 20px;
-                              color: #f44336;
-                            "
-                            >delete</i
-                          >
-                          <div class="ripple-container"></div>
+                        <a href="#" class="d-inline btn-delete"  title="Delete payment mode type" data-pk="{{payment_mode.pk}}" data-name="{{ payment_mode.pay_type }}" data-target="#deleteToggle"
+                            data-toggle="modal" >
+                            <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
                         </a>
+                                                
                       </td>
                     </tr>
-                    <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                      <div class="modal-dialog modal-dialog-top" role="document">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
-                            <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                          </div>
-                          <div class="modal-body">
-                            Are you sure you want to delete payment mode of type {{ payment_mode.pay_type }}?
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
-                            <a href="{% url 'delete_payment_mode' payment_mode.pk %}" type="button" class="btn btn-danger">Yes</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                  
                     {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Payment Mode Type</td></tr> {% endif %}
                   </tbody>
                 </table>
+                <!-- Modal -->
+                <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-top" role="document">
+                      <div class="modal-content">
+                      <div class="modal-header">
+                          <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
+                      <div class="modal-body"></div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                          <a href="" class="btn btn-danger confirmation" data-dismiss="modal">Yes</a>
+                      </div>
+                      </div>
+                  </div>
+              </div>
               </div>
             </div>
             <!-- end content-->
@@ -176,5 +168,16 @@
     </div>
   </form>
 </div>
+<script type="module" >
+  import {deleteFunc} from '../../static/js/master_tables.js'
+  
+  deletePaymentModeType()
+  function deletePaymentModeType() {
+    let endpoint = "/delete-payment-mode";
+    let whatHasBeenDeleted = "Payment Mode Type";
+    let redirectUrl = "/add-payment-mode/";
+    deleteFunc(endpoint, whatHasBeenDeleted, redirectUrl);
+  }
 
+</script>
 {% endblock body %}
