--- a/templates/new_door/add_contract_request.html
+++ b/templates/new_door/add_contract_request.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %} {% block title %} Contract Request Type {% endblock title %} {% block body %} {% load static %}
+<div class="alert alert-success alert-dismissible fade show" style="display: none;" role="alert">
+  <span class="message"></span>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 <div class="col-md-12">
   <div class="card">
     <div
@@ -119,47 +126,33 @@
                         >
                       </a>
 
-                      <a
-                        href="#"
-                        class="d-inline" title="Delete contract request"
-                        data-toggle="modal" data-target="#deleteToggle"
-                      >
-                        <i
-                          class="material-icons"
-                          style="
-                            margin-right: 5px;
-                            margin-top: 10px;
-                            margin-bottom: 20px;
-                            color: #f44336;
-                          "
-                          >delete</i
-                        >
-                        <div class="ripple-container"></div>
+                      <a href="#" class="d-inline btn-delete" data-pk="{{contract_request.pk}}" data-name="{{ contract_request.contract_req }}" data-target="#deleteToggle"
+                          data-toggle="modal" >
+                          <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
                       </a>
                     </td>
                   </tr>
-                  <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-top" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
-                          <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          Are you sure you want to delete {{ contract_request.contract_req }} requested by {{ contract_request.tenant.user.username.capitalize }}?
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
-                          <a href="{% url 'delete_contract_request' contract_request.pk  %}" type="button" class="btn btn-danger">Yes</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                 
                   {% endfor %} {% else %} <tr class="text-center"><td colspan="7">No Contract Requests</td></tr> {% endif %}
                 </tbody>
               </table>
+              <!-- Modal -->
+              <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-top" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                        <a href="" class="btn btn-danger confirmation" data-dismiss="modal">Yes</a>
+                    </div>
+                    </div>
+                </div>
+              </div>
             </div>
           </div>
       </div>
@@ -167,4 +160,16 @@
     </div>
   </div>
 </div>
+<script type="module" >
+
+  import {deleteFunc} from '../../static/js/master_tables.js'
+  deleteContractRequestType();
+  function deleteContractRequestType() {
+    let endpoint = "/delete-contract-request";
+    let whatHasBeenDeleted = "Contract Request Type";
+    let redirectUrl = "/add-contract-request/";
+    deleteFunc(endpoint, whatHasBeenDeleted, redirectUrl);
+  }
+
+</script>
 {% endblock body %}
