--- a/templates/new_door/add_documents_type.html
+++ b/templates/new_door/add_documents_type.html
@@ -1,4 +1,10 @@
-{% extends 'base.html' %} {% block title %} Documents_Type {% endblock title %} {% block body %} {% load static %}
+{% extends 'base.html' %} {% block title %} Documents Type {% endblock title %} {% block body %} {% load static %}
+<div class="alert alert-success alert-dismissible fade show" style="display: none;" role="alert">
+    <span class="message"></span>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 <div class="col-md-12">
     <form id="TypeValidation" class="form-horizontal" action=" " method="post" novalidate="novalidate" enctype="multipart/form-data">
         {% csrf_token %}
@@ -68,43 +74,39 @@
                                                 </a>
                                               
 
-                                                <a href=" {% url 'update_doc_type' doc.pk %} " class="d-inline" title="update document type">
+                                                <a href=" {% url 'update_doc_type' doc.pk %} " class="d-inline" title="Update document type">
                                                     
                                                     <i class="material-icons "  style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #4caf50; ">create</i>
                                                 </a>
                                                
 
-                                                <a href="#" class="d-inline" title="Delete document type" data-target="#deleteToggle"
-                                                data-toggle="modal">
-                                                    
+                                                <a href="#" class="d-inline btn-delete"  title="Delete document type" data-pk="{{doc.pk}}" data-name="{{ doc.docs_type }}" data-target="#deleteToggle"
+                                                data-toggle="modal" >
                                                     <i class="material-icons " style="margin-right: 5px; margin-top: 10px; margin-bottom: 20px; color: #f44336; " >delete</i>
-                                                    
                                                 </a>
                                                 
                                             </td>
                                         </tr>
-                                        <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                            <div class="modal-dialog modal-dialog-top" role="document">
-                                              <div class="modal-content">
-                                                <div class="modal-header">
-                                                  <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
-                                                  <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                  </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                  Are you sure you want to delete documents type {{ doc.docs_type }}?
-                                                </div>
-                                                <div class="modal-footer">
-                                                  <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
-                                                  <a href="{% url 'delete_doc_type' doc.pk %}" type="button" class="btn btn-danger">Yes</a>
-                                                </div>
-                                              </div>
-                                            </div>
-                                          </div>
+            
                                           {% endfor %} {% else %} <tr class="text-center"><td colspan="4">No Document Type</td></tr> {% endif %}
                                     </tbody>
                                 </table>
+                                <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-top" role="document">
+                                        <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body"></div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                                            <a href="" class="btn btn-danger confirmation" data-dismiss="modal">Yes</a>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -116,4 +118,16 @@
 </div>
 
 </div>
+<script type="module" >
+    import {deleteFunc} from '../../static/js/master_tables.js'
+
+    deleteDocumentType();
+    function deleteDocumentType() {
+        let endpoint = "/delete-doc-type";
+        let whatHasBeenDeleted = "Document Type";
+        let redirectUrl = "/add-doc-type/";
+        deleteFunc(endpoint, whatHasBeenDeleted, redirectUrl);
+    }
+    
+  </script>
 {% endblock body %}
