--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %} {% load static %} {% load humanize %} {% block title %} Unit Overview {% endblock title %} {% block body %}
+<div class="alert alert-success alert-dismissible fade show" style="display: none;" role="alert">
+  <span class="message"></span>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <div class="row">
   <div class="col-md-12">
     <div class="row">
@@ -256,71 +262,77 @@
                   >
                 </a>            
                 {% if unit.tenantcontract.tenant.user.username %}
-                  <a
-                    href="{% url 'review_documents' unit.tenantcontract.tenant.user.username %} "
-                    class="d-inline delete-item"
-                    title="View contract"
-                  >
-                    <i
-                      class="material-icons"
-                      style="
-                        margin-right: 5px;
-                        margin-top: 10px;
-                        margin-bottom: 20px;
-                        color: #0e352b;
-                      "
-                      >description</i
-                    >
-                    <div class="ripple-container"></div>
-                  </a>
-                {% endif %}
+              <a
+                href="{% url 'review_documents' unit.tenantcontract.tenant.user.username %} "
+                class="d-inline delete-item"
+                title="View contract"
+              >
+                <i
+                  class="material-icons"
+                  style="
+                    margin-right: 5px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    color: #0e352b;
+                  "
+                  >description</i
+                >
+                <div class="ripple-container"></div>
+              </a>
+            {% endif %}
 
-                {% if request.user.is_superuser %}
-                <a
-                    href="#"
-                    class="d-inline delete-item"
-                    title="Delete unit"
-                    data-target="#deleteToggle"
-                    data-toggle="modal"
+              {% if request.user.is_superuser %}
+              <a
+                  href="#"
+                  class="d-inline delete-item btn-delete"
+                  title="Delete unit"
+                  data-target="#deleteToggle"
+                  data-toggle="modal"
+                  data-pk="{{unit.pk}}" data-name="{{ unit.flat }}"
+                >
+                  <i
+                    class="material-icons"
+                    style="
+                      margin-right: 5px;
+                      margin-top: 10px;
+                      margin-bottom: 20px;
+                      color: #c55d55;
+                    "
+                    >delete</i
                   >
-                    <i
-                      class="material-icons"
-                      style="
-                        margin-right: 5px;
-                        margin-top: 10px;
-                        margin-bottom: 20px;
-                        color: #c55d55;
-                      "
-                      >delete</i
-                    >
-                    <div class="ripple-container"></div>
-                </a>
-                {% endif %}
-              </td>
-            </tr>
-                      <!-- Modal -->
-            <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-top" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
-                    <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    Are you sure you want to delete unit flat number {{ unit.flat }}?
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
-                    <a href="{% url 'delete_unit' unit.pk %}" type="button" class="btn btn-danger">Yes</a>
-                  </div>
-                </div>
+                  <div class="ripple-container"></div>
+              </a>
+              {% endif %}
+          </td>
+        </tr>
+
+          {% endfor %}
+          {% else %} 
+          <tr><td colspan="8" class="text-center">No Units</td></tr>  
+          {% endif %}
+
+        </tbody>
+        </table>
+        <!-- Modal -->
+        <div class="modal fade" id="deleteToggle" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-top" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <!-- <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5> -->
+                <button type="button" class="close p-3" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
+                <a href="" type="button" class="btn btn-danger confirmation" data-dismiss="modal">Yes</a>
               </div>
             </div>
-            {% endfor %} {% else %} <tr class="text-center"><td colspan="7">No Unit</td></tr>  {% endif %}
-          </tbody>
-        </table>
+          </div>
+        </div>
       </div>
     </div>
     <!-- end content-->
